.k8s/network-policies/security-default-deny/default-deny-all-dev-infra.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: dev-infra
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
