.k8s/network-policies/security-default-deny/default-deny-all-dev-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: dev-web
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
